// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserForm.vue should render correctly when form is child of AddNewUser page 1`] = `
<div class="px-lg-7">
  <form>
    <div class="form-group">
      <label for="name">Name</label>
      <input type="text" id="name" aria-describedby="name" placeholder="Enter your name" class="form-control">
      <!---->
    </div>
    <div class="form-group">
      <label for="email">Email address</label>
      <input type="email" id="email" aria-describedby="email" placeholder="Enter your email" class="form-control">
      <!---->
      <!---->
    </div>
    <div class="form-group">
      <label for="phone">Phone</label>
      <input type="text" id="phone" aria-describedby="phone" placeholder="Enter your phone number" class="form-control">
      <!---->
    </div>
    Your gender:
    <div class="form-check form-check-inline">
      <input type="radio" name="gender" id="gender1" value="male" class="form-check-input">
      <label for="gender1" class="form-check-label">male</label>
    </div>
    <div class="form-check form-check-inline">
      <input type="radio" name="gender" id="gender2" value="female" class="form-check-input">
      <label for="gender2" class="form-check-label">female</label>
    </div>
    <div class="form-group">
      <label for="password">Password</label>
      <input type="password" id="password" aria-describedby="password" placeholder="Choose a password (min 6 characters)" class="form-control">
      <!---->
      <!---->
    </div>
    <div class="form-group">
      <label for="password-again">Repeat password</label>
      <input type="password" id="password-again" aria-describedby="password-again" placeholder="Enter your password again" class="form-control">
      <!---->
    </div>
    Choose services:
    <div class="form-check form-check-inline">
      <input type="checkbox" value="mobile" id="service-mobile" class="form-check-input">
      <label for="service-mobile" class="form-check-label">
        Mobile
      </label>
    </div>
    <div class="form-check form-check-inline">
      <input type="checkbox" value="internet" id="service-internet" class="form-check-input">
      <label for="service-internet" class="form-check-label">
        Internet
      </label>
    </div>
    <div class="form-check form-check-inline">
      <input type="checkbox" value="tv" id="service-tv" class="form-check-input">
      <label for="service-tv" class="form-check-label">
        TV
      </label>
    </div>
    <div class="form-group">
      <label for="country">Select your country</label>
      <select id="country" class="form-control">
        <option value="Germany">
          Germany
        </option>
        <option value="Hungary">
          Hungary
        </option>
        <option value="Italy">
          Italy
        </option>
        <option value="Spain">
          Spain
        </option>
        <option value="UK">
          UK
        </option>
        <option value="USA">
          USA
        </option>
      </select>
      <!---->
    </div>
    <div class="form-group">
      <div class="form-check">
        <input type="checkbox" id="newsletter" class="form-check-input">
        <label for="newsletter" class="form-check-label">
          Newsletter?
        </label>
      </div>
    </div>
    <!---->
    <button id="form-submit" type="submit" class="btn btn-primary">Save</button>
  </form>
</div>
`;

exports[`UserForm.vue should render correctly when form is child of EditUserData page 1`] = `
<div class="px-lg-7">
  <form>
    <div class="form-group">
      <label for="name">Name</label>
      <input type="text" id="name" aria-describedby="name" placeholder="Enter your name" class="form-control">
      <!---->
    </div>
    <div class="form-group">
      <label for="email">Email address</label>
      <input type="email" id="email" aria-describedby="email" placeholder="Enter your email" class="form-control">
      <!---->
      <!---->
    </div>
    <div class="form-group">
      <label for="phone">Phone</label>
      <input type="text" id="phone" aria-describedby="phone" placeholder="Enter your phone number" class="form-control">
      <!---->
    </div>
    Your gender:
    <div class="form-check form-check-inline">
      <input type="radio" name="gender" id="gender1" value="male" class="form-check-input">
      <label for="gender1" class="form-check-label">male</label>
    </div>
    <div class="form-check form-check-inline">
      <input type="radio" name="gender" id="gender2" value="female" class="form-check-input">
      <label for="gender2" class="form-check-label">female</label>
    </div>
    <!---->
    <!---->
    Choose services:
    <div class="form-check form-check-inline">
      <input type="checkbox" value="mobile" id="service-mobile" class="form-check-input">
      <label for="service-mobile" class="form-check-label">
        Mobile
      </label>
    </div>
    <div class="form-check form-check-inline">
      <input type="checkbox" value="internet" id="service-internet" class="form-check-input">
      <label for="service-internet" class="form-check-label">
        Internet
      </label>
    </div>
    <div class="form-check form-check-inline">
      <input type="checkbox" value="tv" id="service-tv" class="form-check-input">
      <label for="service-tv" class="form-check-label">
        TV
      </label>
    </div>
    <div class="form-group">
      <label for="country">Select your country</label>
      <select id="country" class="form-control">
        <option value="Germany">
          Germany
        </option>
        <option value="Hungary">
          Hungary
        </option>
        <option value="Italy">
          Italy
        </option>
        <option value="Spain">
          Spain
        </option>
        <option value="UK">
          UK
        </option>
        <option value="USA">
          USA
        </option>
      </select>
      <!---->
    </div>
    <div class="form-group">
      <div class="form-check">
        <input type="checkbox" id="newsletter" class="form-check-input">
        <label for="newsletter" class="form-check-label">
          Newsletter?
        </label>
      </div>
    </div>
    <!---->
    <button id="form-submit" type="submit" class="btn btn-primary">Save</button>
  </form>
</div>
`;
